NOCC 1.0.0    ?? ??, 2006

    * Add option to automatically choose mail domain to use with HTTP host
      (Edwin Meester, patch #1268985).
    * Sort IMAP folder names (Arnaud Boudou, bug #1351980).
    * Add Japanese language file (Tadashi Jokagi, patch #1349062).
    * Encrypt session stored passwords (Arnaud Boudou & Olivier Jourdat,
      RFE #811901, bug #1348164).
    * Improve RSS feed with subfolders (Arnaud Boudou).
    * Add compatibility with PHP 5.0.5 (Arnaud Boudou, bug #1291160).
    * Fix issue with message wrapping (Arnaud Boudou).
    * Add "To" header into mail list view (Arnaud Boudou, RFE #494191).
    * Add Catalan language file (David Gimeno i Ayuso).
    * Use PNG image files instead of GIF (Arnaud Boudou).
    * Add possibility to go back to previous page in case of unrecoverable 
      error (Arnaud Boudou).
    * NOCC is now XTHML 1.1 Strict compliant (Arnaud Boudou).
    * Improved CSS customization (Arnaud Boudou).
    * Sent Folder can now be setup by user and is no more a global option
      (Arnaud Boudou).
    * Enforce $conf->crlf option in order to avoid mixed "\r\n" and "\n" line
      break (Arnaud Boudou, bug #1228430).
    * Added option to select the character to use for login<char>domain login
      style (Arnaud Boudou).
    * Fix french translation (Arnaud Boudou).
    * Fix issue with use of user's reply leading (Arnaud Boudou).
    * Fix issue where allow_reply_leading configuration property was not taken
      in account if set to false, and a reply leading was previously set in
      users preferences (Arnaud Boudou).
    * Add possibility for the user to override incoming mail charset. Iconv is
      now mandatory (Arnaud Boudou, RFE #408167).
    * Add new configuration option in order to use a default encoding charset
      (default to UTF-8) in case no one is provided by the displayed mail
      (Arnaud Boudou).
    * Replace all "<?" tags by "<?php" tags. (Arnaud Boudou, bug #1230999).